# UMI-Dex

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  README_zhCN.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
config/: calibration.csv  intel_d455.yaml
docs/: README.md  orb_runner_changes_zh.md  orb_runner_guide.md  processing.md  recording_sop.md
docs/en/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
docs/zh-CN/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
hardware/: README.md  README_zhCN.md  UMI-Dex Encoder Board.step  UMI-Dex-PCB.epro2
hardware/L6-TG-STEP/: 3588-pcb-bottom-cover.stp  3588-pcb-top-cover.stp  arm-strap-1.stp  camera-mount-l.stp  camera-mount-r.stp  camera-zhijia-1.stp  carema-cover.stp  finger-1.stp  finger-root.stp  finger-strap.stp  l6-botto-cover.stp  l6-top-cover.stp  link-1.stp  link-2.stp  m1-6.stp  m2-12.stp  m2-16.stp  m2-5.stp  m2-8.stp  magnet.stp  screen-cover.stp  thumb-1.stp  thumb-2.stp  thumb-link-1.stp  thumb-root-1.stp  thumb-root.stp
ros/: CMakeLists.txt  README.md  package.xml  setup.py
ros/config/: calibration.csv  camera_serials.conf  d455_params.yaml
ros/launch/: capture.launch  controller.launch  d405.launch  d455.launch  playback.launch
ros/linker_umi_dex/: calibration.py  can_protocol.py
ros/msg/: CanFrame.msg  HandJointState.msg
ros/nodes/: bag_extract_node  can_controller_node  can_raw_node  interactive_capture_node
ros/umi_dex/: __init__.py  bag_utils.py  calibration.py  can_protocol.py
script/: interactive_record.py  ros_topic_capture_save.py  visualize_trajectory.py
script/clothes/: controller_angles.csv  pose_imu.csv
script/clothes/output_topics_20260325_010230/: controller_angles.csv  pose_imu.csv
script/clothes_2/: controller_angles.csv  pose_imu.csv
script/clothes_3/: controller_angles.csv  pose_imu.csv
script/clothes_4/: controller_angles.csv  pose_imu.csv
script/cola/: controller_angles.csv  pose_imu.csv
script/egg/: controller_angles.csv  pose_imu.csv
script/nut/: controller_angles.csv  pose_imu.csv
script/tennis/: controller_angles.csv  pose_imu.csv
script/tissue/: controller_angles.csv  pose_imu.csv
src/controller_reader/: package.xml  setup.cfg  setup.py
src/controller_reader/config/: controller_reader_params.yaml
src/controller_reader/controller_reader/: controller_reader_node.py
src/controller_reader/launch/: controller_reader.launch.py
src/controller_reader/script/: bind_usb.sh  l6encoder_usb.rules
src/kimera_vio_bringup/: package.xml  setup.cfg  setup.py
src/kimera_vio_bringup/config/: kimera_d455_params.yaml
src/kimera_vio_bringup/launch/: d455_kimera_vio.launch.py
src/kimera_vio_bringup/resource/: kimera_vio_bringup
src/linker_umi_dex/: __init__.py  align.py  controller_capture.py  orb_runner.py  record_realsense.py  visualize_trajectory.py
src/linker_umi_dex/wrapper/: __init__.py  interactive_record.py  visualize.py
src/umi_dex/: __init__.py  align.py  bag_reader.py  controller_capture.py  episodes.py  orb_runner.py  session_meta.py  timebase.py
src/umi_dex/cli/: extract.py  inspect.py  process.py  slam.py
src/umi_dex/controllers/: __init__.py  calibrate.py  can_decode.py
src/umi_dex/dataset/: assemble.py  schema.py
src/umi_dex/slam/: exporter.py  replay.py
src/umi_dex/video/: encode.py
src/umi_dex/wrapper/: visualize.py
tests/: test_calibrate.py  test_can_decode.py  test_dataset_assemble.py  test_episodes.py  test_session_meta.py  test_timebase.py
