[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "umi-dex"
version = "0.1.0"
description = "ROS1 recording pipeline with ORB-SLAM3 analysis utilities"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "orbslam3-python>=2.0.0",
    "pyrealsense2>=2.57.7.10387",
    "python-can>=4.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
orb-run = "umi_dex.orb_runner:main"
capture-controller = "umi_dex.controller_capture:main"
align-trajectory = "umi_dex.align:main"
visualize-trajectory = "umi_dex.wrapper.visualize:main"

[tool.hatch.build.targets.wheel]
packages = ["src/umi_dex"]
