<?xml version="1.0"?>
<package format="2">
  <name>umi_dex</name>
  <version>0.1.0</version>
  <description>
    ROS1 capture pipeline for the UMI-Dex hand controller.
    Publishes CAN-based joint angles and orchestrates D455/D405
    interactive recording via rosbag.
  </description>
  <maintainer email="helloworld@linkerbot.cn">Linkerbot Maintainers</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
</package>
