<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kimera_vio_bringup</name>
  <version>1.0.0</version>
  <description>ROS2 bringup package for RealSense D455 and Kimera-VIO integration.</description>
  <maintainer email="ywt@todo.todo">ywt</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>

  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>kimera_vio_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
